Multicouches corrections des parapluies et des graphes

--- a/pyheatmy/research/DREAM_v1.ipynb
+++ b/pyheatmy/research/DREAM_v1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +188,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "Initialisation - Utilisation de la mémoire (en Mo) : 307.544064\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Burn in phase:   0%|          | 0/25 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Burn in phase:   4%|▍         | 1/25 [00:00<00:11,  2.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/pgpetitmangin/molo/td/td3/MOLONARI1D/pyheatmy/pyheatmy/core.py\", line 762, in compute_solve_transi\n",
+      "    raise ValueError(\"NaN values in compute_solve_transi\")\n",
+      "ValueError: NaN values in compute_solve_transi\n",
+      "Burn in phase:   4%|▍         | 1/25 [00:00<00:18,  1.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "---Débogage des dimensions avant la boucle : len(K_list) = 60, nablaH.shape = (60, 1309) ---\n",
+      "Issue for the following parameters : [Param(moinslog10IntrinK=np.float32(14.696182), n=np.float32(0.18262224), lambda_s=np.float32(1.7628839), rhos_cs=np.float32(4.460957e+06), q=np.float32(9.50229e-05)), Param(moinslog10IntrinK=np.float32(11.132697), n=np.float32(0.039634895), lambda_s=np.float32(3.9080238), rhos_cs=np.float32(4.7349025e+06), q=np.float32(1.759906e-05)), Param(moinslog10IntrinK=np.float32(11.285437), n=np.float32(0.10651493), lambda_s=np.float32(3.297011), rhos_cs=np.float32(3.2045652e+06), q=np.float32(4.0409708e-05))]\n",
+      "Issue for the follwing number of layers : 3\n",
+      "\n",
+      "--- RAPPORT DE BUG DÉFINITIF ---\n",
+      "Une erreur inattendue s'est produite : NaN values in compute_solve_transi\n",
+      "Voici la trace exacte menant à l'erreur :\n",
+      "--- FIN DU RAPPORT ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "NaN values in compute_solve_transi",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcol\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcompute_mcmc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnb_chain\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m15\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelta\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/molo/td/td3/MOLONARI1D/pyheatmy/pyheatmy/checker.py:55\u001b[39m, in \u001b[36mchecker.<locals>.wrapper\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m     53\u001b[39m new_wrapper.reset = reset\n\u001b[32m     54\u001b[39m \u001b[38;5;28msetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, checked_meth.\u001b[34m__name__\u001b[39m, new_wrapper)\n\u001b[32m---> \u001b[39m\u001b[32m55\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnew_wrapper\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/molo/td/td3/MOLONARI1D/pyheatmy/pyheatmy/checker.py:47\u001b[39m, in \u001b[36mchecker.<locals>.wrapper.<locals>.new_wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     44\u001b[39m \u001b[38;5;129m@wraps\u001b[39m(checked_meth)\n\u001b[32m     45\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mnew_wrapper\u001b[39m(*args, **kwargs):\n\u001b[32m     46\u001b[39m     \u001b[38;5;28msetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, chkd_name, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mchecked_meth\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/molo/td/td3/MOLONARI1D/pyheatmy/pyheatmy/core.py:1187\u001b[39m, in \u001b[36mColumn.compute_mcmc\u001b[39m\u001b[34m(self, quantile, verbose, typealgo, sigma2, nb_iter, nb_chain, nitmaxburning, delta, n_CR, c, c_star, n_sous_ech_time, n_sous_ech_space, threshold)\u001b[39m\n\u001b[32m   1184\u001b[39m     layer.params = Param(*X_proposal[l])\n\u001b[32m   1186\u001b[39m \u001b[38;5;66;03m# Calcul du profil de température associé aux nouveaux paramètres\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1187\u001b[39m \u001b[43mcolumn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcompute_solve_transi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m   1189\u001b[39m \u001b[38;5;66;03m# On récupère les températures et les débits associés aux nouveaux paramètres\u001b[39;00m\n\u001b[32m   1190\u001b[39m temp_proposal = column._temperatures\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/molo/td/td3/MOLONARI1D/pyheatmy/pyheatmy/checker.py:47\u001b[39m, in \u001b[36mchecker.<locals>.wrapper.<locals>.new_wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     44\u001b[39m \u001b[38;5;129m@wraps\u001b[39m(checked_meth)\n\u001b[32m     45\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mnew_wrapper\u001b[39m(*args, **kwargs):\n\u001b[32m     46\u001b[39m     \u001b[38;5;28msetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, chkd_name, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mchecked_meth\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/molo/td/td3/MOLONARI1D/pyheatmy/pyheatmy/core.py:770\u001b[39m, in \u001b[36mColumn.compute_solve_transi\u001b[39m\u001b[34m(self, verbose)\u001b[39m\n\u001b[32m    768\u001b[39m traceback.print_exc()\n\u001b[32m    769\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m--- FIN DU RAPPORT ---\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m770\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/molo/td/td3/MOLONARI1D/pyheatmy/pyheatmy/core.py:762\u001b[39m, in \u001b[36mColumn.compute_solve_transi\u001b[39m\u001b[34m(self, verbose)\u001b[39m\n\u001b[32m    756\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\n\u001b[32m    757\u001b[39m                 \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIssue for the following parameters : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.get_list_current_params()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    758\u001b[39m             )\n\u001b[32m    759\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\n\u001b[32m    760\u001b[39m                 \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIssue for the follwing number of layers : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.all_layers)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    761\u001b[39m             )\n\u001b[32m--> \u001b[39m\u001b[32m762\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNaN values in compute_solve_transi\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    764\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:  \u001b[38;5;66;03m# <-- LE \"EXCEPT\" EST ICI, À LA FIN\u001b[39;00m\n\u001b[32m    765\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m--- RAPPORT DE BUG DÉFINITIF ---\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: NaN values in compute_solve_transi"
+     ]
+    }
+   ],
    "source": [
     "col.compute_mcmc(nb_chain=15, delta=4)"
    ]
@@ -468,7 +588,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "molonaricompatible",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -482,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
