--- a/pyheatmy/demoInversion.ipynb
+++ b/pyheatmy/demoInversion.ipynb
@@ -660,7 +660,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10.12",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -674,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
