transformation de field-code en firmware

--- a/hardware/Pour_2026-2027.md
+++ b/hardware/Pour_2026-2027.md
@@ -8,7 +8,8 @@ Des choses marchent :
 - Tout est rangé proprement, la structure est lisible : bibliothèques d'un côté et fichiers principaux de chaque carte de l'autre.
 - Tout compile bien sur l'ordinateur, et l'upload sur les cartes focntionne.
 - On arrive à recevoir des informations de la carte : l'initialisation de la SD, la lecture de configuration, le lancement des mesures, leur stockage en local
-- 
+- On arrive à faire communiquer la carte relay et la carte sensor : ATTENTION à toujours modifier les fichiers config qui doivent être stockés sur les cartes SD avec les bonnes valeurs (par exemple de devEui et appEui pour les communications inetrcartes).
+- On arrive à envoyer des données du relay à la gateway et de la gateway au serveur et du serveur au site. 
 
 
 ## 2. La suite prévue
