--- a/hardware/Pour_2026-2027.md
+++ b/hardware/Pour_2026-2027.md
@@ -4,12 +4,12 @@
 
 Des choses marchent : 
 
-- Platformio fonctionne bien et permet la gestion de bibliothèques externes et internes au projet. La gestion du fichier platformio.ini dépend de la suite du projet mais elle peut sûrement être grandement conservée.
+- Platformio fonctionne bien et permet la gestion de bibliothèques externes et internes au projet. La gestion du fichier platformio.ini dépend de la suite du projet mais elle peut être grandement conservée.
 - Tout est rangé proprement, la structure est lisible : bibliothèques d'un côté et fichiers principaux de chaque carte de l'autre.
 - Tout compile bien sur l'ordinateur, et l'upload sur les cartes focntionne.
 - On arrive à recevoir des informations de la carte : l'initialisation de la SD, la lecture de configuration, le lancement des mesures, leur stockage en local
 - On arrive à faire communiquer la carte relay et la carte sensor : ATTENTION à toujours modifier les fichiers config qui doivent être stockés sur les cartes SD avec les bonnes valeurs (par exemple de devEui et appEui pour les communications inetrcartes).
-- On arrive à envoyer des données du relay à la gateway et de la gateway au serveur et du serveur au site. 
+- On arrive à envoyer des données du relay à la gateway et de la gateway au serveur et du serveur au site. (avec les codes démo qui sont en gros les mêmes avec des temps différents, faites la différence avec les mains et corrigez les pour le vrai fonctionnement).
 
 
 ## 2. La suite prévue
@@ -18,14 +18,14 @@ Il reste plusieurs choses à implémenter qui ont été réfléchies cette anné
 
 - L'implémentation d'une gestion de plusieurs cartes avec capteurs depuis un même relai. Il faut pouvoir recevoir depuis le relay les informations des différentes cartes avec leur identifiant propre, et gérer proprement les temps d'arrivée des données.
 - Il y a un problème car la gateway ne peut pas envoyer des données descendantes, elle ne peut que recevoir. Elle devra être changée en un raspbery. Il faudra coder sa reception des données LoRaWAN et le transfert internet. Avec cela, il faudra rajouter la gestion des données descendantes au niveau du relai et du capteur : recevoir le fichier config et remplacer celui déjà mis sur la carte. On pourrait croire que c'est beaucoup de choses pour un petit résultat, et que beaucoup de problèmes peuvent arriver : fichier corrompu rendant impossible la suite des mesures sur le relai ou le capteur, déconnexion entre les deux car fichier modifié sur un seul, perte de la suite des données...
-- Forme d'optimisation des bibliothèques pour les rendre plus claires : petites bibliothèques avec seulement les fonctions de base, ne s'appelant pas les unes les autres. Plus grosses librairies qui les appellent par groupe pour former les blocs important, qu'on appelle ensuite dans les main.
-- Comme vous pourrez voir dans le paragraphe d'au-dessous que la gestion du temps n'est absolument pas satisfaisante. Pour ne plus avoir de problème de décalage des fenêtres de communication il faut:
+- Forme d'optimisation des bibliothèques pour les rendre plus claires : petites bibliothèques avec seulement les fonctions de base, ne s'appelant pas les unes les autres. Plus grosses librairies qui les appellent par groupe pour former les blocs important, qu'on appelle ensuite dans les main. Ce n'est qu'une idée pas nécessaire
+- Comme vous pourrez voir dans le paragraphe d'au-dessous que la gestion du temps n'est pas satisfaisante. Pour ne plus avoir de problème de décalage des fenêtres de communication il faut:
     - il faut ajouter une fonction qui donne l'heure de toutes les communications à faire de la journée en fonction de l'intervalle de communication demandé
     - il faut modifier le code pour qu'il déclenche les communication à heure fixe plutôt que après un intervalle de temps 
     - Les horloges peuvent dériver jusqu'a 2 secondes par jour et jusqu'à 5 min par mois. Il faut donc créer et implémenter une fonction qui met à jour à l'heure d'internet grâce à la gateway les deux cartes toutes les semaines pour limiter cette dérive et pouvoir continuer à communiquer.
     
     (NOTA BENE : pas besoin de modifier ça pour les mesures vu que y a pas besoin de coordonner les cartes, ca ca marche déjà très bien
-    NOTA TRES BENE : une fois les fichiers upload n'appuyer plus sur reset ca décale les horloges)
+    NOTA TRES BENE : une fois les fichiers upload n'appuyer plus sur reset ca décale les horloges : elles se remettent à l'heure du dernier upload)
 
 
 ## 3. Quoi de plus ?
@@ -35,7 +35,8 @@ Quelques infos générales :
 - C'est bien de savoir coder en c++, sinon il faut regarder les bases sur internet.
 - Cela met du temps de comprendre la structure du code et les codes eux-mêmes, bon courage.
 - Nous espérons que ça marchera !
-- C'est très galère d'upload sur les cartes avec un Mac faite le avec un Windows.
+- C'est très galère d'upload sur les cartes avec un Mac faite le avec un Windows, à la fin tout marchait sur mac mais bon.
 - Quand vous uploadez le programme sur les cartes il faut cliquer 2 fois sur le bouton reset quand la phrase 'Waiting for the new upload port...' apparaît ça réinitialise la carte.
 - Pour savoir si les cartes fonctionnent bien il faut que elles clignotent réguilièrement avec une lumière orange.
 - Les horloges : l'horloge RTC est calée sur l'heure de la dernière COMPILATION donc une fois que le code est uploadé à chaque fois que on appuie sur reset il se remet sur l'heure à laquelle on a compilé le code --> on peut donc avoir plusieurs heures de décalage ! Pour le début il ne faut donc PAS appuyer sur reset une fois que vous avez compilé les codes et il faut compiler les codes en MEME temps. 
+- On utilise platformio pour upload et arduino ide pour visualiser ce que nous dit la carte en temps réel (println, DEBUG_LOg...)
