Clear Outputs on ipynb

--- a/pyheatmy/demo_genData_real.ipynb
+++ b/pyheatmy/demo_genData_real.ipynb
@@ -570,7 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyheatmy.frequency import frequency_analysis\n",
+    "from frequency import frequency_analysis\n",
     "fa = frequency_analysis()"
    ]
   },
