Finalize demoGenData.ipynb

--- a/pyheatmy/research/demo_prediction_2D.ipynb
+++ b/pyheatmy/research/demo_prediction_2D.ipynb
@@ -11,7 +11,10 @@
     "\n",
     "Pour chacun de ces débit, on applique nos méthodes AICC et LRT afin de savoir ce qu'elles prédisent. \n",
     "\n",
-    "On tracera ensuite les prédictions des 2 modèles en fonction de **q** afin de déterminer leurs caractéristiques et les valeurs limites de **q**."
+    "On tracera ensuite les prédictions des 2 modèles en fonction de **q** afin de déterminer leurs caractéristiques et les valeurs limites de **q**.\n",
+    "\n",
+    "Problème : Nécessite 2 fichiers CSV + problème moinslog10IntrinK. \n",
+    "Les fichiers CSV sont sur la branche 205-frequentiel-amortissement_et_dephasage-copy"
    ]
   },
   {
