--- a/pyheatmy/demo_genData.ipynb
+++ b/pyheatmy/demo_genData.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Generating synthetic data sets of a river bed column forced by monoperiodic river and aquifer temperature signals\n",
     "\n",
-    "**This is the updated demo notebook for `molonari`. Dated 2025**\n",
+    "2025 developped Noé Daniel - Updated demo gen data notebook for `molonari` with double representation of the riverbed porous medium. First direct simulation is performed until riverdepth (deep enough to assess a constant aquifer temperature in agreement with the analytical case study from TD1). It is used to constraint the molonari column with T4 estimated by the first coarse simulation. It corrects the 2024 developped by 2024 developped by Nicolas Flipo from demo_gen_test.ipynb created by Guillaume de Rochefort during MOLONARI 2022 \n",
+    "\n",
+    "2025 - Addind to the notebook the frequency analysis developped by the frequency group.\n",
+    "\n",
     "\n",
     "The object of this demo is to present a class responsible for generating a simulation of pressure and temperature sensor data in cases where data from the CAPTEUR project is not available. Based on the `synthetic_MOLONARI` class in `synthetic_MOLONARI.py`.\n",
     "\n",
@@ -570,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from frequency import frequency_analysis\n",
+    "from pyheatmy.frequency import frequency_analysis\n",
     "fa = frequency_analysis()"
    ]
   },
@@ -684,167 +687,6 @@
     "print(\"Best model:\", modele[\"modele\"])\n",
     "modele_intercept = fa.critere_2D(intercept=True, show_reg=True)\n",
     "print(\"Best model with intercept:\", modele_intercept[\"modele\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Multilayered riverbed -- No printing option activated"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Warning\n",
-    "It seems that there is a bug at the interface between layers and also if a sensor is located at the interface"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_debut = (2011, 8, 1)\n",
-    "t_fin = (2011, 8, 31, 23, 59, 59)\n",
-    "dt = 15*60 # pas de temps en (s)\n",
-    "\n",
-    "T_riv_amp = 2\n",
-    "T_riv_offset = 20 + ZERO_CELSIUS\n",
-    "P_T_riv = 72*4*dt\n",
-    "\n",
-    "T_aq_amp = 0\n",
-    "T_aq_offset = 14 + ZERO_CELSIUS\n",
-    "P_T_aq = 9999 # à mettre dans le init\n",
-    "\n",
-    "dH_amp = 0\n",
-    "dH_offset = 0.1\n",
-    "P_dh = -9999 #14*24*4*dt\n",
-    "\n",
-    "Zbottom = 0.6\n",
-    "depth_sensors = [.1, .25, .3, .4, Zbottom] # le code fonctionne avec n capteurs, watch the compatibility with Zbottom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "liste_param_dH = [[dH_offset], [dH_amp, P_dh, 0]]\n",
-    "liste_param_T_riv = [[T_riv_offset], [T_riv_amp, P_T_riv, 0]]\n",
-    "liste_param_T_aq = [[T_aq_offset], [T_aq_amp, P_T_aq, 0]]\n",
-    "\n",
-    "time_series_dict_user4 = {\n",
-    "    \"offset\" : 0,\n",
-    "    \"depth_sensors\":depth_sensors,\n",
-    "\t\"param_time_dates\": [t_debut, t_fin, dt], \n",
-    "    \"param_dH_signal\": liste_param_dH, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
-    "\t\"param_T_riv_signal\": liste_param_T_riv,\n",
-    "    \"param_T_aq_signal\": liste_param_T_aq,\n",
-    "    \"sigma_meas_P\": 0.05,\n",
-    "    \"sigma_meas_T\": 0.1, #float\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emu_observ_test_user4 = synthetic_MOLONARI.from_dict(time_series_dict_user4)\n",
-    "# emu_observ_test_user4._generate_all_series()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
-    "Layer1 = {\n",
-    "    \"name\": \"gravier\",\n",
-    "    \"zLow\": .2,\n",
-    "    \"moinslog10IntrinK\":11,\n",
-    "    \"n\": .4,\n",
-    "    \"lambda_s\": 2,\n",
-    "    \"rhos_cs\": 4e6,\n",
-    "    \"q_s\": 0,\n",
-    "}\n",
-    "\n",
-    "Layer2 = {\n",
-    "    \"name\": \"Couche en sable\",\n",
-    "    \"zLow\": Zbottom,\n",
-    "    \"moinslog10IntrinK\":14,\n",
-    "    \"n\": .1,\n",
-    "    \"lambda_s\": 2,\n",
-    "    \"rhos_cs\": 4e6,\n",
-    "    \"q_s\": 0,\n",
-    "}\n",
-    "\n",
-    "# on utilise les mesures générées précédemment\n",
-    "col_dict4 = {\n",
-    "\t\"river_bed\": 1., \n",
-    "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
-    "\t\"offset\": .0,\n",
-    "    \"dH_measures\": emu_observ_test_user4._molonariP_data,\n",
-    "    \"T_measures\": emu_observ_test_user4._molonariT_data,\n",
-    "    \"nb_cells\" : nbcells,\n",
-    "    \"sigma_meas_P\": emu_observ_test_user4._sigma_P, #float\n",
-    "    \"sigma_meas_T\": emu_observ_test_user4._sigma_T, #float\n",
-    "}\n",
-    "\n",
-    "col4 = Column.from_dict(col_dict4)\n",
-    "\n",
-    "# modèle une couche\n",
-    "col4.set_layers([Layer.from_dict(Layer1),Layer.from_dict(Layer2)])\n",
-    "\n",
-    "# print(emu_observ_test_user1._T_Shaft)\n",
-    "emu_observ_test_user4._measures_column_one_layer(col4)\n",
-    "#emu_observ_test_user1._plot_molonariT_data()\n",
-    "col4.plot_temperature_at_sensors(verbose=False)\n",
-    "\n",
-    "\n",
-    "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
-    "newCol4_dict = {\n",
-    "\t\"river_bed\": 1., \n",
-    "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
-    "\t\"offset\": .0,\n",
-    "    \"dH_measures\": emu_observ_test_user4._molonariP_data,\n",
-    "    \"T_measures\": emu_observ_test_user4._molonariT_data,\n",
-    "    \"nb_cells\" : nbcells,\n",
-    "    \"sigma_meas_P\": None, #float\n",
-    "    \"sigma_meas_T\": None, #float\n",
-    "}\n",
-    "ncol4 = Column.from_dict(newCol4_dict)\n",
-    "ncol4.set_layers([Layer.from_dict(Layer1),Layer.from_dict(Layer2)])\n",
-    "ncol4.compute_solve_transi(verbose=True)\n",
-    "\n",
-    "nt = len(ncol4._temperatures[0,:])\n",
-    "dplot=15\n",
-    "ncol4.plot_temperatures_umbrella(round(nt/dplot))\n",
-    "\n",
-    "flows = ncol4.get_flows_solve()\n",
-    "unitLeg=\"m/s\"\n",
-    "title=\"Débits\"\n",
-    "ncol4.plot_it_Zt(flows,title,unitLeg,1.04,2)\n",
-    "\n",
-    "ncol4.print_RMSE_at_sensor()\n",
-    "ncol4.plot_compare_temperatures_sensors()\n",
-    "ncol4.plot_CALC_results()\n",
-    "#ncol4.print_in_file_processed_MOLONARI_dataset(zeroT=0) #No printing of the multilayer case study for the usage of demoInversion.ipynb\n",
-    "\n",
-    "\n"
    ]
   }
  ],
